<?xml version="1.0"?>
<package format="2">
  <name>map_based_prediction</name>
  <version>1.0.0</version>
  <description>This package implements an map_based_prediction</description>

  <maintainer email="kosuke.murakami@tier4.jp">Kosuke Murakami</maintainer>

  <license>Apache</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>autoware_perception_msgs</depend>
  <depend>vector_map_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
  </export>
</package>
