<?xml version="1.0"?>
<package format="2">
  <name>mission_planner</name>
  <version>0.0.0</version>
  <description>The mission_planner package</description>

  <maintainer email="ryohsuke.mitsudome@tier4.jp">mitsudome-r</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_planning_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>lanelet2_extension</depend>
  <depend>roscpp</depend>
  <depend>tf2_ros</depend>

</package>
